{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 458,
  "lineage": "93692eb9-a7d9-65b1-b167-d2bd1a7be7d9",
  "resources": [
    {
      "module": "module.bastion_host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07651f0c4c315a529",
            "arn": "arn:aws:ec2:ap-southeast-1:277552698365:instance/i-0bb73009d01e1857b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb73009d01e1857b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tool",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b58ba90499a854b4",
            "private_dns": "ip-10-0-1-116.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.116",
            "public_ip": "13.214.209.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b328fe81be0cf801",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8d3ce9b6180d6c6",
            "tags": {
              "Name": "mongo-Main",
              "Owner": "digvijay singh"
            },
            "tags_all": {
              "Name": "mongo-Main",
              "Owner": "digvijay singh"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-022bcd5517a8bd4b2"
            ]
          },
          "dependencies": [
            "module.pb_subnet.aws_subnet.public_subnet",
            "module.pub_sg.aws_security_group.public_security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277552698365:internet-gateway/igw-01a160906b40abb26",
            "id": "igw-01a160906b40abb26",
            "owner_id": "277552698365",
            "tags": {
              "Name": "mongo-igw",
              "Owner": "digvijay singh"
            },
            "tags_all": {
              "Name": "mongo-igw",
              "Owner": "digvijay singh"
            },
            "vpc_id": "vpc-023546c7413a21e1d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07651f0c4c315a529",
            "arn": "arn:aws:ec2:ap-southeast-1:277552698365:instance/i-0b5795d4bcef6a6ec",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b5795d4bcef6a6ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tool",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b9c12b3a9e8f28a7",
            "private_dns": "ip-10-0-1-31.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.31",
            "public_ip": "13.212.197.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08289e1d116e0414b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8d3ce9b6180d6c6",
            "tags": {
              "Name": "mongo-Main",
              "Owner": "digvijay singh"
            },
            "tags_all": {
              "Name": "mongo-Main",
              "Owner": "digvijay singh"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-022bcd5517a8bd4b2"
            ]
          },
          "dependencies": [
            "module.pb_subnet.aws_subnet.public_subnet",
            "module.pub_sg.aws_security_group.public_security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasticIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-013c54106562eb0ea",
            "domain": "vpc",
            "id": "eipalloc-013c54106562eb0ea",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-54-169-234-206.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.169.234.206",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-013c54106562eb0ea",
            "connectivity_type": "public",
            "id": "nat-0ad7ae505529df248",
            "network_interface_id": "eni-02273db2482020c27",
            "private_ip": "10.0.1.29",
            "public_ip": "54.169.234.206",
            "subnet_id": "subnet-0a8d3ce9b6180d6c6",
            "tags": {
              "Name": "mongo-nat",
              "Owner": "digvijay singh"
            },
            "tags_all": {
              "Name": "mongo-nat",
              "Owner": "digvijay singh"
            }
          },
          "dependencies": [
            "module.nat.aws_eip.elasticIP",
            "module.pb_subnet.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.node1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07651f0c4c315a529",
            "arn": "arn:aws:ec2:ap-southeast-1:277552698365:instance/i-06130222945e1262a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06130222945e1262a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tool",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04dda903c5aaa0edd",
            "private_dns": "ip-10-0-2-238.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fec3d17637db8724",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-079b615216d7d214d",
            "tags": {
              "Name": "mongo-Node1",
              "Owner": "digvijay singh"
            },
            "tags_all": {
              "Name": "mongo-Node1",
              "Owner": "digvijay singh"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-096e1c669ec839427"
            ]
          },
          "dependencies": [
            "module.pvt_sg.aws_security_group.private_security_group",
            "module.pvt_subnet1.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.node2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07651f0c4c315a529",
            "arn": "arn:aws:ec2:ap-southeast-1:277552698365:instance/i-0893cf2eebcf3328e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0893cf2eebcf3328e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tool",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ec4eff88ad29666c",
            "private_dns": "ip-10-0-3-22.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e12e45de527c4f2a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6e901cfcd721eee",
            "tags": {
              "Name": "mongo-Node2",
              "Owner": "digvijay singh"
            },
            "tags_all": {
              "Name": "mongo-Node2",
              "Owner": "digvijay singh"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-096e1c669ec839427"
            ]
          },
          "dependencies": [
            "module.pvt_sg.aws_security_group.private_security_group",
            "module.pvt_subnet2.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pb_rt_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_routeTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277552698365:route-table/rtb-055857509d3a6340d",
            "id": "rtb-055857509d3a6340d",
            "owner_id": "277552698365",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a160906b40abb26",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mongo-pub-routeTB",
              "Owner": "digvijay singh"
            },
            "tags_all": {
              "Name": "mongo-pub-routeTB",
              "Owner": "digvijay singh"
            },
            "timeouts": null,
            "vpc_id": "vpc-023546c7413a21e1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pb_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018a0f5a703c082e5",
            "route_table_id": "rtb-055857509d3a6340d",
            "subnet_id": "subnet-0a8d3ce9b6180d6c6"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.pb_rt_table.aws_route_table.public_routeTable",
            "module.pb_subnet.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pb_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277552698365:subnet/subnet-0a8d3ce9b6180d6c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8d3ce9b6180d6c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277552698365",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mongo-subnet",
              "Owner": "digvijay singh"
            },
            "tags_all": {
              "Name": "mongo-subnet",
              "Owner": "digvijay singh"
            },
            "vpc_id": "vpc-023546c7413a21e1d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pub_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277552698365:security-group/sg-022bcd5517a8bd4b2",
            "description": "security group of mongo",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022bcd5517a8bd4b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Traffic from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Traffic from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port for os-dashboard ",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "mongo-public-sg",
            "name_prefix": "",
            "owner_id": "277552698365",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mongo-public-sg",
              "Owner": "digvijay singh"
            },
            "tags_all": {
              "Name": "mongo-public-sg",
              "Owner": "digvijay singh"
            },
            "timeouts": null,
            "vpc_id": "vpc-023546c7413a21e1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pvt_rt_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_routeTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277552698365:route-table/rtb-0a36cfd110a0a1fdf",
            "id": "rtb-0a36cfd110a0a1fdf",
            "owner_id": "277552698365",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ad7ae505529df248",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mongo-private-routeTB",
              "Owner": "digvijay singh"
            },
            "tags_all": {
              "Name": "mongo-private-routeTB",
              "Owner": "digvijay singh"
            },
            "timeouts": null,
            "vpc_id": "vpc-023546c7413a21e1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_eip.elasticIP",
            "module.nat.aws_nat_gateway.ngw",
            "module.pb_subnet.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pvt_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277552698365:security-group/sg-096e1c669ec839427",
            "description": "security group of mongo",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096e1c669ec839427",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Traffic from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port for os-dashboard ",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Traffic from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "mongo-private-sg",
            "name_prefix": "",
            "owner_id": "277552698365",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mongo-private-sg",
              "Owner": "digvijay singh"
            },
            "tags_all": {
              "Name": "mongo-private-sg",
              "Owner": "digvijay singh"
            },
            "timeouts": null,
            "vpc_id": "vpc-023546c7413a21e1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pvt_subnet1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092ebff0e4302a0b2",
            "route_table_id": "rtb-0a36cfd110a0a1fdf",
            "subnet_id": "subnet-079b615216d7d214d"
          },
          "dependencies": [
            "module.nat.aws_eip.elasticIP",
            "module.nat.aws_nat_gateway.ngw",
            "module.pb_subnet.aws_subnet.public_subnet",
            "module.pvt_rt_table.aws_route_table.private_routeTable",
            "module.pvt_subnet1.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pvt_subnet1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277552698365:subnet/subnet-079b615216d7d214d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079b615216d7d214d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277552698365",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "data-node1",
              "Owner": "digvijay singh"
            },
            "tags_all": {
              "Name": "data-node1",
              "Owner": "digvijay singh"
            },
            "vpc_id": "vpc-023546c7413a21e1d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pvt_subnet2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0371c8d027119a8a0",
            "route_table_id": "rtb-0a36cfd110a0a1fdf",
            "subnet_id": "subnet-0c6e901cfcd721eee"
          },
          "dependencies": [
            "module.nat.aws_eip.elasticIP",
            "module.nat.aws_nat_gateway.ngw",
            "module.pb_subnet.aws_subnet.public_subnet",
            "module.pvt_rt_table.aws_route_table.private_routeTable",
            "module.pvt_subnet2.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pvt_subnet2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277552698365:subnet/subnet-0c6e901cfcd721eee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6e901cfcd721eee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277552698365",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "data-node2",
              "Owner": "digvijay singh"
            },
            "tags_all": {
              "Name": "data-node2",
              "Owner": "digvijay singh"
            },
            "vpc_id": "vpc-023546c7413a21e1d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277552698365:vpc/vpc-023546c7413a21e1d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-096d783f76f1ef598",
            "default_route_table_id": "rtb-0a319296e3a8d0a11",
            "default_security_group_id": "sg-0d637199e5b8d6b14",
            "dhcp_options_id": "dopt-070d9ddd49329f539",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-023546c7413a21e1d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a319296e3a8d0a11",
            "owner_id": "277552698365",
            "tags": {
              "Name": "mongo-vpc",
              "Owner": "digvijay singh"
            },
            "tags_all": {
              "Name": "mongo-vpc",
              "Owner": "digvijay singh"
            }
          }
        }
      ]
    }
  ]
}